--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -58,7 +58,10 @@
      <number>4</number>
     </property>
     <property name="value" stdset="0">
-     <double>2453.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_rpm_mean">
@@ -74,7 +77,10 @@
      <number>4</number>
     </property>
     <property name="value" stdset="0">
-     <double>3476.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_rpm_max">
@@ -90,7 +96,10 @@
      <number>4</number>
     </property>
     <property name="value" stdset="0">
-     <double>4797.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_speed_max">
@@ -106,7 +115,10 @@
      <number>2</number>
     </property>
     <property name="value" stdset="0">
-     <double>41.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_speed_value">
@@ -122,7 +134,10 @@
      <number>2</number>
     </property>
     <property name="value" stdset="0">
-     <double>34.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_speed_mean">
@@ -138,7 +153,10 @@
      <number>2</number>
     </property>
     <property name="value" stdset="0">
-     <double>23.000000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcd_distance">
@@ -157,7 +175,10 @@
      <number>4</number>
     </property>
     <property name="value" stdset="0">
-     <double>10.400000000000000</double>
+     <double>0.000000000000000</double>
+    </property>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
    <widget class="QProgressBar" name="progress_battery">
@@ -170,7 +191,7 @@
      </rect>
     </property>
     <property name="value">
-     <number>57</number>
+     <number>0</number>
     </property>
     <property name="invertedAppearance">
      <bool>false</bool>
@@ -186,10 +207,10 @@
      </rect>
     </property>
     <property name="value">
-     <number>78</number>
+     <number>0</number>
     </property>
    </widget>
-   <widget class="QListWidget" name="console_display">
+   <widget class="QListWidget" name="console">
     <property name="geometry">
      <rect>
       <x>853</x>
@@ -273,7 +294,7 @@ color: rgb(255, 0, 0);</string>
     </property>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
+  <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -298,55 +319,43 @@ color: rgb(255, 0, 0);</string>
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionConnect"/>
+    <widget class="QMenu" name="menuConnect">
+     <property name="title">
+      <string>Connect</string>
+     </property>
+    </widget>
+    <addaction name="menuConnect"/>
     <addaction name="actionNew"/>
     <addaction name="actionSave"/>
-    <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionHow_to_use"/>
-    <addaction name="actionAbout_the_program"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
-    <string>Save</string>
+    <string>Save as</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionNew">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
-    <string>New</string>
+    <string>New report</string>
    </property>
-  </action>
-  <action name="actionAbout_the_program">
-   <property name="text">
-    <string>About the program</string>
-   </property>
-  </action>
-  <action name="actionHow_to_use">
-   <property name="text">
-    <string>How to use</string>
-   </property>
-  </action>
-  <action name="actionQuit">
-   <property name="text">
-    <string>Quit</string>
-   </property>
-  </action>
-  <action name="actionConnect">
-   <property name="text">
-    <string>Connect</string>
-   </property>
-   <property name="visible">
-    <bool>true</bool>
-   </property>
-   <property name="iconVisibleInMenu">
-    <bool>true</bool>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
  </widget>
