Modularização do código, implementação de estados e acabamento do design da interface

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -39,7 +39,7 @@
      <enum>Qt::PlainText</enum>
     </property>
     <property name="pixmap">
-     <pixmap>sketch/background.png</pixmap>
+     <pixmap>sketch/background2.png</pixmap>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -317,45 +317,54 @@ color: rgb(255, 0, 0);</string>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>Arquivo</string>
     </property>
     <widget class="QMenu" name="menuConnect">
      <property name="title">
-      <string>Connect</string>
+      <string>Conectar</string>
      </property>
     </widget>
     <addaction name="menuConnect"/>
-    <addaction name="actionNew"/>
-    <addaction name="actionSave"/>
+    <addaction name="actionStart"/>
+    <addaction name="actionStop"/>
+    <addaction name="actionDisconnect"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>Ajuda</string>
     </property>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
-  <action name="actionSave">
+  <action name="actionStart">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Save as</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
-  </action>
-  <action name="actionNew">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="text">
-    <string>New report</string>
+    <string>Iniciar</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionStop">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Parar</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="actionDisconnect">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Desconectar</string>
    </property>
   </action>
  </widget>
